@@ -177,6 +177,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #12028: Make threading._get_ident() public, rename it to
+  threading.get_ident() and document it. This function was used by
+  _thread.get_ident().
+
 - Issue #12171: IncrementalEncoder.reset() of CJK codecs (multibytecodec) calls
   encreset() instead of decreset().
 
